# gh-report

./: .gitignore  .graphifyignore  AGENTS.md  Cargo.toml  FOCUS.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  adr-fmt.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
crates/adr-fmt/: Cargo.toml  README.md
crates/adr-fmt/src/: config.rs  containment.rs  context.rs  guidelines.rs  lib.rs  main.rs  model.rs  nav.rs  output.rs  parser.rs  refs.rs  report.rs
crates/adr-fmt/tests/: integration.rs  lib_smoke.rs
crates/adr-srv/: Cargo.toml
crates/adr-srv/src/: lib.rs  main.rs  projection.rs  scrape.rs
crates/adr-srv/tests/: graphql_read_e2e.rs  scrape_pipeline.rs  skeleton.rs  smoke.rs
crates/architect/: Cargo.toml
crates/architect/src/: adr.rs  fence.rs  lib.rs  main.rs  manifest.rs  render.rs
crates/architect/tests/: fence_preservation.rs
crates/cherry-pit-agent/: Cargo.toml  README.md
crates/cherry-pit-agent/src/: app.rs  dead_letter.rs  dispatch.rs  error.rs  event_bus.rs  lib.rs  projection.rs
crates/cherry-pit-agent/tests/: dead_letter_tracing.rs  ergonomic_benchmark.rs  event_bus_integration.rs  per_aggregate_ordering.proptest-regressions  per_aggregate_ordering.rs  taxonomy_integration.rs  taxonomy_proptest.rs  taxonomy_unit.rs  trybuild.rs
crates/cherry-pit-app/: Cargo.toml  README.md
crates/cherry-pit-app/src/: app.rs  dead_letter.rs  dispatch.rs  error.rs  event_bus.rs  lib.rs  projection_source.rs  scheduler.rs
crates/cherry-pit-app/tests/: dead_letter_tracing.rs  durable_scheduler.rs  ergonomic_benchmark.rs  event_bus_integration.rs  per_aggregate_ordering.rs  projection_source.rs  taxonomy_integration.rs  taxonomy_proptest.rs  taxonomy_unit.rs
crates/cherry-pit-core/: Cargo.toml  README.md
crates/cherry-pit-core/src/: aggregate.rs  aggregate_id.rs  bus.rs  checkpoint.rs  command.rs  correlation.rs  error.rs  event.rs  gateway.rs  idempotency.rs  lib.rs  policy.rs  projection.rs  scheduler.rs  store.rs  testing.rs  work.rs
crates/cherry-pit-core/tests/: adt_obligations.rs  aggregate_default_zero_state.rs  conformance_in_memory.rs  dep_tree.rs  event_history_in_memory.rs  hexagonal_ports_only.rs  readme_doctest.rs  scheduler.rs  termination_is_domain_event.rs
crates/cherry-pit-gateway/: Cargo.toml  README.md  RUNBOOKS.md
crates/cherry-pit-gateway/src/: lib.rs  recovery.rs
crates/cherry-pit-gateway/tests/: conformance_file_store.rs  conformance_msgpack_file_store.rs  per_aggregate_file_roundtrip.rs  stale_lock_evidence.rs
crates/cherry-pit-merger/: Cargo.toml
crates/cherry-pit-merger/src/: arm.rs  command.rs  handle.rs  lib.rs  merger.rs  shared.rs
crates/cherry-pit-merger/tests/: end_to_end.rs  i1_toctou_pin.rs
crates/cherry-pit-pardosa/: Cargo.toml  README.md
crates/cherry-pit-pardosa/src/: file_store.rs  lib.rs  payload.rs  store.rs
crates/cherry-pit-pardosa/tests/: conformance_event_store.rs  conformance_file_pardosa_store.rs  conformance_pardosa_store.rs  genome_safe_payload.rs  jetstream_runtime_bridge.rs  list_aggregates.rs  per_aggregate_pardosa_roundtrip.rs  read_seam.rs  smoke.rs  stale_lock_evidence.rs
crates/cherry-pit-projection/: Cargo.toml  README.md
crates/cherry-pit-projection/proptest-regressions/: lib.txt
crates/cherry-pit-projection/src/: lib.rs  write_cell.rs
crates/cherry-pit-projection/tests/: conformance_file_store.rs
crates/cherry-pit-storage/: Cargo.toml  README.md
crates/cherry-pit-storage/src/: error.rs  fs.rs  lib.rs  lock.rs  signature.rs
crates/cherry-pit-storage/tests/: properties.rs  smoke.rs
crates/cherry-pit-web/: Cargo.toml  README.md
crates/cherry-pit-web/src/: command_router.rs  correlation.rs  errors.rs  lib.rs  path.rs  router.rs  state.rs
crates/cherry-pit-web/tests/: command_router_smoke.rs  compile_tests.rs  correlation.rs  integration_inmem.rs  projection_http.rs  projection_layer_limits.rs  projection_proptest.rs  projection_ws.rs  projection_ws_smoke.rs  sec_0003_cqrs_router.rs  sec_0003_enforced_at_library_surface.rs  server_error_pub_visibility.rs  types.rs
crates/cherry-pit-wq/: Cargo.toml  README.md
crates/cherry-pit-wq/src/: budget.rs  lib.rs  rate_limit.rs  work_queue.rs  worker_pool.rs
crates/cherry-pit-wq/tests/: properties.rs  smoke.rs
crates/comment-free/: Cargo.toml  README.md
crates/comment-free/src/: lib.rs  main.rs
crates/comment-free/tests/: end_to_end.rs
crates/gh-report/: Cargo.toml  DESIGN.md  Dockerfile  OPERATIONS.md  README.md  build.rs
crates/gh-report-queue-viz/: Cargo.toml  README.md  bootstrap.js  index.html
crates/gh-report-queue-viz/pkg/: gh_report_queue_viz.d.ts  gh_report_queue_viz.js  gh_report_queue_viz_bg.wasm  gh_report_queue_viz_bg.wasm.d.ts
crates/gh-report-queue-viz/src/: lib.rs  sim.rs  view.rs
crates/gh-report-web-client/: Cargo.toml
crates/gh-report-web-client/src/: dom.rs  lib.rs  sort.rs
crates/gh-report/src/: api_outcome.rs  error.rs  lib.rs  pattern_match.rs  projection.rs  server.rs  test_fixtures.rs
crates/gh-report/templates/: admin.html  branch_protection.html  deleted.html  gh-report-web-client.js  gh-report-web-client_bg.wasm  index.html  operations.html  orphans.html  owner_detail.html  owners.html  report.html  sort-init.js  style.css  ws.js
crates/gh-report/tests/: baseline_subordinate_to_events.rs  binary_restart_persistence.rs  bootstrap_replay.rs  event_schema_append_only.rs  live_nats_n_writer_fence_property.proptest-regressions  live_nats_n_writer_fence_property.rs  live_nats_pardosa_create_or_open.rs  live_nats_two_writer_fence.rs  (+12 more)
crates/pardosa-cli/: Cargo.toml
crates/pardosa-derive/: Cargo.toml  README.md
crates/pardosa-encoding/: Cargo.toml
crates/pardosa-eventstore/: Cargo.toml
crates/pardosa-fiber-store/: Cargo.toml
crates/pardosa-file/: Cargo.toml  README.md
crates/pardosa-genome/: ADOPTION.md  Cargo.toml  genome.md
crates/pardosa-mint-private-tests/: Cargo.toml
crates/pardosa-nats/: Cargo.toml
crates/pardosa-read/: Cargo.toml  README.md
crates/pardosa-schema/: Cargo.toml  README.md
crates/pardosa-test-support-harness/: Cargo.toml
(+1116 files in other folders)
