[package]
name = "adr-fmt"
version = "0.1.0"
description = "ADR template and link-integrity validator"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "adr_fmt"
path = "src/lib.rs"

[[bin]]
name = "adr-fmt"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
