[package]
name = "adr-srv"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0 OR MIT"
publish = false

[lints]
workspace = true

[dependencies]
# adr-fmt library surface (AFM-0026:R1) — already wired in M1.1.
adr-fmt = { path = "../adr-fmt" }

# Event-sourcing substrate (CHE-0054:R8/R10 carve-out — no agent/App;
# uses gateway's MsgpackFileStore directly).
# Persistence via cherry-pit-gateway's MsgpackFileStore (msgpack via
# rmp-serde, file-per-aggregate).
cherry-pit-core = { workspace = true }
cherry-pit-gateway = { workspace = true }

# Wire substrate.
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Domain primitives.
jiff = { workspace = true }
xxhash-rust = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }

[[bin]]
name = "adr-srv"
path = "src/main.rs"

[lib]
name = "adr_srv"
path = "src/lib.rs"
