[package]
name = "architect"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Coarse crate-to-vault fenced-note generator for the gh-report workspace"
publish = false

[lints]
workspace = true

[[bin]]
name = "architect"
path = "src/main.rs"

[lib]
name = "architect"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
