[package]
name = "cherry-pit-core"
version = "0.1.0"
description = "Foundational traits for cherry-pit: aggregates, commands, events, ports"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/acje/solon/tree/main/crates/cherry-pit-core"
documentation = "https://docs.rs/cherry-pit-core"
readme = "README.md"
keywords = ["event-sourcing", "cqrs", "ddd", "aggregate", "domain-events"]
categories = ["data-structures"]

[lints]
workspace = true

[features]
# In-memory fixtures (FakeBus, InMemoryEventStore, InMemoryProjectionStore)
# behind a feature gate so production builds stay clear of test-only code.
# Carve-out CHE-0058 permits `#[cfg(any(test, feature = "testing"))] pub mod
# testing;` over CHE-0030:R1's bare-`pub mod` ban. Zero new dependencies
# (CHE-0029:R4 inviolate) — implementation is pure std on top of the
# existing serde/uuid/jiff trio.
testing = []

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
trybuild = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
toml = { workspace = true }
