[package]
name = "cherry-pit-core"
version = "0.1.0"
description = "Foundational traits for cherry-pit: aggregates, commands, events, ports"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/acje/solon/tree/main/crates/cherry-pit-core"
documentation = "https://docs.rs/cherry-pit-core"
readme = "README.md"
keywords = ["event-sourcing", "cqrs", "ddd", "aggregate", "domain-events"]
categories = ["data-structures"]

[lints]
workspace = true

[features]
# In-memory fixtures (FakeBus, InMemoryEventStore, InMemoryProjectionStore)
# behind a feature gate so production builds stay clear of test-only code.
# Carve-out CHE-0058 permits `#[cfg(any(test, feature = "testing"))] pub mod
# testing;` over CHE-0030:R1's bare-`pub mod` ban. Zero new dependencies
# (CHE-0029:R4 inviolate) — implementation is pure std on top of the
# existing serde/uuid/jiff trio.
testing = []

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }
# Pardosa-encoding has been removed from the workspace
# (pardosa-deletion-1779100000); DomainEvent now bounds on
# serde::{Serialize, DeserializeOwned}. ADR cleanup deferred per user
# mission scope — CHE-0064:R2 / PAR-0024:R5 governance debt accepted;
# follow-up tracked in bd issue (see ADR supersession debt).

[dev-dependencies]
proptest = { workspace = true }
trybuild = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
toml = { workspace = true }
# Self dev-dep activates the `testing` feature for integration tests
# (`tests/*.rs`) without exposing the `testing` module in normal
# downstream builds. Cargo unifies features across the test graph, so
# the integration-test compilation sees `pub mod testing` while
# downstream production builds that depend on cherry-pit-core without
# `features = ["testing"]` still get the gated-out surface.
cherry-pit-core = { path = ".", features = ["testing"] }
