[package]
name = "cherry-pit-gateway"
version = "0.1.0"
description = "Infrastructure implementations for cherry-pit: event stores"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/acje/solon/tree/main/crates/cherry-pit-gateway"
documentation = "https://docs.rs/cherry-pit-gateway"
keywords = ["event-sourcing", "event-store", "msgpack", "cqrs"]
categories = ["data-structures", "filesystem"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
cherry-pit-core = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
scc = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "rt"] }
uuid = { workspace = true }
jiff = { workspace = true }

[dev-dependencies]
cherry-pit-core = { workspace = true, features = ["testing"] }
# CHE-0064:R2 — fixture events in this crate's tests hand-roll
# `impl pardosa_encoding::Encode for X` alongside their
# `impl DomainEvent for X` per the supertrait tightening.
pardosa-encoding = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
