[package]
name = "cherry-pit-pardosa"
version = "0.1.0"
description = "Pardosa-backed EventStore adapter for cherry-pit, with single-writer semantics and an opt-in rollout stub for PAR-0021 hash chains"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/acje/solon/tree/main/crates/cherry-pit-pardosa"
documentation = "https://docs.rs/cherry-pit-pardosa"
keywords = ["event-sourcing", "event-store", "pardosa", "cherry-pit", "cqrs"]
categories = ["data-structures"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Cherry-pit core ports (EventStore + the three CHE-0057 extension traits).
cherry-pit-core = { workspace = true }
# Pardosa substrate (Dragline, DomainId, MigrationPolicy).
pardosa = { workspace = true }
# Envelope construction uses jiff::Timestamp and uuid::Uuid::now_v7.
jiff = { workspace = true }
uuid = { workspace = true }
# δ.3a — file-backed store decodes EventEnvelope<E> off disk under the
# narrower `where E: pardosa_encoding::Decode` bound at the use site
# (CHE-0064:R2 keeps the DomainEvent supertrait Encode-only).
pardosa-encoding = { workspace = true }

[dev-dependencies]
# SM-6: re-pull cherry-pit-core with the `testing` feature so the
# conformance harness (cherry_pit_core::testing::conformance) is
# accessible from tests/. The non-feature build (above) stays clean
# of test-only code per CHE-0058 carve-out. The serde dev-dep
# remains: TestEvent in conformance_pardosa_store.rs derives
# Serialize/Deserialize (the harness's bounds reach via DomainEvent).
cherry-pit-core = { workspace = true, features = ["testing"] }
# CHE-0064:R2 — fixture events in this crate's tests hand-roll
# `impl pardosa_encoding::Encode for X` alongside their
# `impl DomainEvent for X` per the supertrait tightening.
pardosa-encoding = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
serde = { workspace = true }
# δ.3a — file-backed conformance + roundtrip + lock tests need
# `tempfile::TempDir` for per-scenario isolation (CHE-0038:R5).
tempfile = { workspace = true }
# δ.3a — stale-lock evidence test reuses the cherry-pit-gateway
# helper (`stale_lock_evidence` is generic over a `Path` and lives
# on the public surface), avoiding duplication. Dev-only.
cherry-pit-gateway = { workspace = true }
