[package]
name = "cherry-pit-web"
version = "0.1.0"
description = "HTTP adapter for cherry-pit CommandGateway over axum"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage = "https://github.com/acje/solon/tree/main/crates/cherry-pit-web"
documentation = "https://docs.rs/cherry-pit-web"
keywords = ["http", "axum", "cqrs", "command-gateway"]
categories = ["web-programming::http-server"]
readme = "README.md"

[lints]
workspace = true

[features]
default = []
projection = []

[dependencies]
cherry-pit-core = { workspace = true }
axum = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
percent-encoding = { workspace = true }
sha2 = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
jiff = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
proptest = { workspace = true }
trybuild = { workspace = true }
