[package]
name = "comment-free"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap.workspace = true
thiserror.workspace = true
syn = { workspace = true, features = ["parsing", "visit", "visit-mut"] }
quote.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
ra-ap-rustc_lexer = "=0.170.0"
walkdir = "2"
similar = "3"

[dev-dependencies]
tempfile.workspace = true
