[package]
name = "gh-report-web-client"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Leptos CSR client: progressive-enhancement sortable tables for gh-report"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
leptos = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
